<resources>

    <string name="app_name">Mountain Tracker</string>
    <string name="app_website">https://github.com/andreistirb/MountainTracker/wiki</string>

    <!-->Main Activity<-->
    <string name="main_about_btn">About</string>
    <string name="main_mountain">Mountains</string>
    <string name="main_tracks_btn">My Tracks</string>
    <string name="main_logo_description">Logo</string>
    <string name="main_map">Map</string>

    <!-->MountainListActivity<-->
    <string name="activity_mountain_list">Mountains</string>

    <!-->MountainTrackListActivity<-->
    <string name="activity_mountain_tracks_list">Tracks</string>
    <string name="mountain_track_list_marker">Mark</string>
    <string name="mountain_track_list_difficulty">Difficulty:</string>
    <string name="mountain_track_list_duration">Duration:</string>

    <string name="mountain_track_list_menu_sort">Sort</string>
    <string name="mountain_track_list_menu_sort_name">Name</string>
    <string name="mountain_track_list_menu_sort_diff">Difficulty</string>
    <string name="mountain_track_list_menu_sort_dur">Duration</string>

    <string name="mountain_track_list_contextmenu_show">Show on map</string>
    <string name="mountain_track_list_contextmenu_details">Details</string>
    <string name="mountain_track_list_contextmenu_try">Start track</string>

    <!-->MyTrackDetailsActivity<-->
    <string name="my_track_details_duration">Duration (h:mm:ss):</string>
    <string name="my_track_details_distance">Distance (km):</string>
    <string name="my_track_details_avg_speed">Average speed (km/h):</string>
    <string name="my_track_details_max_speed">Max speed (km/h):</string>
    <string name="my_track_details_min_altitude">Min altitude (m):</string>
    <string name="my_track_details_max_altitude">Max altitude (m):</string>
    <string name="my_track_details_export_button">Export as GPX</string>
    <string name="my_track_details_page1">Track details</string>
    <string name="my_track_details_page2">Map</string>
    <string name="my_track_details_unknown_page">Unknown page</string>

    <!-->TrackDetailsActivity<-->
    <string name="track_details_title">Title:</string>
    <string name="track_details_duration">Duration:</string>
    <string name="track_details_difficulty">Difficulty:</string>
    <string name="track_details_mark">Mark:</string>
    <string name="track_details_description">Description:</string>
    <string name="track_details_availability">Accessibility:</string>
    <string name="track_details_min_alt">Min altitude:</string>
    <string name="track_details_max_alt">Max altitude:</string>

    <!-->TrackerManagerActivity<-->
    <string name="activity_tracker_manager">My Tracks</string>
    <string name="tracker_manager_contextmenu_delete_track">Delete track</string>
    <string name="tracker_manager_contextmenu_rename_track">Rename track</string>
    <string name="tracker_manager_contextmenu_export_track">Export GPX track</string>
    <string name="tracker_manager_menu_newtrack">New Track</string>
    <string name="tracker_manager_menu_delete_all">Delete all</string>
    <string name="tracker_manager_menu_backup">Backup tracks</string>
    <string name="tracker_manager_menu_restore_backup">Restore backup</string>

    <!-->TrackLoggerActivity<-->
    <string name="track_logger_start">Start</string>
    <string name="track_logger_map">Map</string>
    <string name="track_logger_stop">Finish</string>
    <string name="track_logger_gps_disabled">GPS disabled</string>
    <string name="track_logger_gps_disabled_hint">Location is not activated. In order to proceed you need to activate location</string>
    <string name="track_logger_alt">Altitude</string>
    <string name="track_logger_lat">Latitude</string>
    <string name="track_logger_lon">Longitude</string>
    <string name="track_logger_speed">Speed(km/h)</string>
    <string name="track_logger_distance">Distance(km)</string>
    <string name="track_logger_time">Time</string>
    <string name="track_logger_details">Details</string>
    <string name="track_logger_trekking">My Tracks</string>

    <!-->UserLocationActivity<-->
    <string name="user_location_activity">Current Location</string>
    <string name="title_activity_user_location">UserLocationActivity</string>

    <!-->GPSLogger<-->
    <string name="notification_ticker_text">Track is recording</string>
    <string name="notification_title">Recording track</string>
    <string name="notification_text">Touch to enter the application</string>

    <!-->Name Dialog<-->
    <string name="new_track_dialog">New track</string>
    <string name="new_track_dialog_ok">OK</string>
    <string name="new_track_dialog_cancel">Cancel</string>

    <!-->Auxiliary<-->
    <string name="line_content_description">Line</string>
    <string name="sample_text">Sample text</string>
    <string name="id">id</string>

    <!--> Track List Item <!-->
    <string name="tracklist_item_name">Track Name</string>
    <string name="tracklist_item_details">Track Details</string>

    <!--> Map Menu </-->
    <string name="mapview_menu_cache">Map Cache</string>
    <string name="mapview_menu_download_view_area">Download map</string>
    <string name="mapview_menu_delete_view_area">Delete map</string>
    <string name="mapview_menu_tile">Map Tiles</string>

    <!--> OSM titles <!-->
    <string name="OSM_Standard">OSM Standard</string>
    <string name="OSM_by_MapQuest">OSM by MapQuest</string>
    <string name="Open_Cycle_Map">Open Cycle Map</string>

    <!--> Settings <!-->
        <!-->Categories<!-->
        <string name="GPS_category_title">GPS</string>
        <string name="map_category_title">MAP</string>

    <string name="geofencing_checkbox_preference_title">Geofencing</string>
    <string name="geofencing_checkbox_preference_summary">The service that leads the path</string>

    <string name="gpsfix_list_preference_title">Gps fix frequency</string>
    <string name="gpsfix_list_preference_summary">Choose the frequency of GPS fixes</string>

    <string name="map_tile_source_preference_title">Tile source</string>
    <string name="map_tile_source_preference_summary">Choose the tile source for map</string>

    <string name="map_compass_preference_title">Compass</string>
    <string name="map_compass_preference_summary">Display compass on map</string>

    <string name="map_rotation_preference_title">Rotate map</string>
    <string name="map_rotation_preference_summary">Rotate map with fingers</string>

    <!--> Navigation Drawer <!-->
    <string name="navigation_drawer_open">Navigation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
