<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mapview_menu_cache"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/mapview_menu_cache">
        <menu>
            <group>
                <item
                    android:id="@+id/mapview_menu_download_view_area"
                    android:title="@string/mapview_menu_download_view_area"/>
                <item
                    android:id="@+id/mapview_menu_delete_view_area"
                    android:title="@string/mapview_menu_delete_view_area"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/mapview_menu_tile"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/mapview_menu_tile">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/mapview_menu_tile_mapnik"
                    android:title="OSM Standard"/>
                <item
                    android:id="@+id/mapview_menu_tile_mapquest_osm"
                    android:title="OSM by MapQuest"/>
                <item
                    android:id="@+id/mapview_menu_tile_cyclemap"
                    android:title="Open Cycle Map"
                    android:checked="true"/>
            </group>
        </menu>
    </item>
</menu>