<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:gravity="left|center_vertical" >

	<TextView
	    android:id="@+id/tracklist_item_id"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/id"
	    android:textSize="30sp" />
	
	<RelativeLayout 
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:gravity="left|center_vertical"  >
	    
	    <TextView
	        android:id="@+id/tracklist_item_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/tracklist_item_name"
	        android:textSize="18sp" />
	    <TextView 
	        android:id="@+id/tracklist_item_details"
	        android:layout_below="@+id/tracklist_item_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="16sp"
	        android:text="@string/tracklist_item_details"/>

	</RelativeLayout>
    
    

</LinearLayout>
