<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navigation_drawer_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background= "@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/main_mountain_btn"
            android:layout_width="165dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:text="@string/main_mountain"
            android:textColor="#ffffff"
            android:fontFamily="sans-serif-light"
            android:textSize="25sp" />

        <Button
            android:id="@+id/main_tracks_btn"
            android:layout_width="165dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:text="@string/main_tracks_btn"
            android:fontFamily="sans-serif-light"
            android:textColor="#ffffff"
            android:textSize="20sp" >
        </Button>

        <Button
            android:id="@+id/main_about_btn"
            android:layout_width="165dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="0.42"
            android:text="@string/main_about_btn"
            android:fontFamily="sans-serif-light"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <Button
            android:id="@+id/main_map_button"
            android:layout_width="165dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:text="@string/main_map"
            android:fontFamily="sans-serif-light"
            android:textColor="#ffffff"
            android:textSize="25sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/main_logo_description"
        android:src="@drawable/logo" />

</RelativeLayout>
    
    <ListView
        android:id="@+id/navigation_drawer_list"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="3dp"
        android:background="#ffeeee"></ListView>

</android.support.v4.widget.DrawerLayout>
