<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start|center_vertical"
    android:orientation="vertical"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/mountain_track_list_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/mountain_track_list_marker"
            android:src="@drawable/banda_rosie"
            android:layout_centerVertical="false"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:paddingBottom="5dp">
        </ImageView>

        <TextView
            android:id="@+id/mountain_track_list_text"
            android:text="@string/sample_text"
            style="@style/track_list_item_title"/>

        <TextView
            android:id="@+id/mountain_track_list_diff_label"
            style="@style/track_list_item_detail"
            android:layout_below="@+id/mountain_track_list_text"
            android:text="@string/mountain_track_list_difficulty"/>

        <TextView
            android:id="@+id/mountain_track_list_diff"
            android:layout_below="@+id/mountain_track_list_text"
            android:layout_toRightOf="@+id/mountain_track_list_diff_label"
            android:layout_toEndOf="@+id/mountain_track_list_diff_label"
            android:text="@string/sample_text"
            style="@style/track_list_item_detail"/>

        <TextView
            android:id="@+id/mountain_track_list_length_label"
            android:layout_below="@+id/mountain_track_list_diff_label"
            android:layout_marginBottom="10dp"
            android:text="@string/mountain_track_list_duration"
            style="@style/track_list_item_detail"/>

        <TextView
            android:id="@+id/mountain_track_list_length"
            style="@style/track_list_item_detail"
            android:layout_below="@+id/mountain_track_list_diff"
            android:layout_toRightOf="@+id/mountain_track_list_length_label"
            android:layout_toEndOf="@+id/mountain_track_list_diff_label"
            android:text="@string/sample_text"
            android:layout_marginBottom="10dp"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:baselineAligned="false">


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="40">
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2">

            <ImageView
                android:id="@+id/imageView1"
                android:contentDescription="@string/line_content_description"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/linie"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="40">
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>