<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/track_logger_button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/track_logger_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00ffffff"
                android:src="@drawable/start_icon"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/line_content_description"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track_logger_start"
                style="@style/text_buton"
                android:clickable="false"
                android:layout_gravity="center_horizontal"
                android:paddingTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/track_logger_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00ffffff"
                android:src="@drawable/stop_icon"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/line_content_description"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track_logger_stop"
                style="@style/text_buton"
                android:clickable="false"
                android:layout_gravity="center_horizontal"
                android:paddingTop="5dp"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/track_logger_prim_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/track_logger_button_layout"
        android:layout_centerHorizontal="true"
        android:paddingTop="40dp">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="300dp"
            android:layout_height="3dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/linie"
            android:contentDescription="@string/line_content_description" />

        <RelativeLayout
            android:id="@+id/track_logger_alt_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/track_logger_lon_layout"
            android:layout_toEndOf="@+id/track_logger_lon_layout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/track_logger_alt_label"
                style="@style/track_logger_layout_label"
                android:text="@string/track_logger_alt" />

            <TextView
                android:id="@+id/track_logger_alt"
                style="@style/track_logger_layout_informatii"
                android:layout_below="@+id/track_logger_alt_label"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/track_logger_lat_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/track_logger_lat_label"
                style="@style/track_logger_layout_label"
                android:text="@string/track_logger_lat" />

            <TextView
                android:id="@+id/track_logger_lat"
                style="@style/track_logger_layout_informatii"
                android:layout_below="@+id/track_logger_lat_label"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/track_logger_lon_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/track_logger_lat_layout"
            android:layout_toEndOf="@+id/track_logger_lat_layout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/track_logger_lon_label"
                style="@style/track_logger_layout_label"
                android:text="@string/track_logger_lon" />

            <TextView
                android:id="@+id/track_logger_lon"
                style="@style/track_logger_layout_informatii"
                android:layout_below="@+id/track_logger_lon_label"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/track_logger_prim_layout"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="300dp"
            android:layout_height="3dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/linie"
            android:contentDescription="@string/line_content_description" />

        <RelativeLayout
            android:id="@+id/track_logger_speed_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/track_logger_speed_label"
                style="@style/track_logger_layout_label"
                android:text="@string/track_logger_speed" />

            <TextView
                android:id="@+id/track_logger_speed"
                style="@style/track_logger_layout_informatii"
                android:layout_below="@+id/track_logger_speed_label" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@+id/track_logger_speed_layout"
            android:layout_toEndOf="@+id/track_logger_speed_layout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/track_logger_distance_label"
                style="@style/track_logger_layout_label"
                android:text="@string/track_logger_distance" />

            <TextView
                android:id="@+id/track_logger_distance"
                style="@style/track_logger_layout_informatii"
                android:layout_below="@+id/track_logger_distance_label"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_toLeftOf="@+id/track_logger_speed_layout"
            android:layout_toStartOf="@+id/track_logger_speed_layout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/track_logger_duration_label"
                style="@style/track_logger_layout_label"
                android:text="@string/track_logger_time" />

            <TextView
                android:id="@+id/track_logger_duration"
                style="@style/track_logger_layout_informatii"
                android:layout_below="@+id/track_logger_duration_label"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/track_logger_map_btn_layout"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="15dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/track_logger_map"
            android:background="#00ffffff"
            android:src="@drawable/map_icon"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/line_content_description"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track_logger_map"
            style="@style/text_buton"
            android:clickable="false"
            android:layout_gravity="center_horizontal"
            android:paddingTop="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <ImageButton
            android:id="@+id/track_logger_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00ffffff"
            android:src="@drawable/details_icon"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/line_content_description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track_logger_details"
            style="@style/text_buton"
            android:clickable="false"
            android:layout_gravity="center_horizontal"
            android:paddingTop="5dp"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <ImageButton
            android:id="@+id/track_logger_trekking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00ffffff"
            android:src="@drawable/trekking_icon"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/line_content_description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track_logger_trekking"
            style="@style/text_buton"
            android:clickable="false"
            android:layout_gravity="center_horizontal"
            android:paddingTop="5dp"/>

    </LinearLayout>



</RelativeLayout>